# embedding

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: development-environment.md  development-standards.md
src/: api.py
src/v1/: reranker.py  service.py
src/v1/utils/: model_loader.py
test/: download_model.py
