[project]
name = "embedding-server"
version = "0.1.0"
description = "Qwen3 Embedding On-Premise API Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "transformers>=4.42.3",
    "accelerate>=0.30.0",
    "torch>=2.6.0",
    "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources.torch]
index = "pytorch"
marker = "platform_machine == 'x86_64' and sys_platform != 'darwin'"
